# paks

./: .gitignore  Cargo.toml  license.txt  paks.wasm  readme.md
examples/: readme1.rs
src/: cipher.rs  crypt.rs  dir.rs  directory.rs  file_io.rs  lib.rs  memory.rs
src/dir/: tests.rs
src/directory/: tests.rs
src/file_io/: edit_file.rs  editor.rs  reader.rs  tests.rs
src/memory/: edit_file.rs  editor.rs  reader.rs  tests.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
webui/: readme.md
webui/viewer/: index.html
webui/wasm/: Cargo.toml
webui/wasm/src/: lib.rs
